Fri May 16 00:07:11 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-all.h: New file.
	* parse.y, lex.l, pt-pr-code.cc: Use it.

	* pt.h: Rename from pt-base.h.

	* All parse tree classes: Add private copy constructors and
	assignment operators to prevent copying.

	* pt-base.cc: Delete.

	* unwind-prot.h, unwind-prot.cc: Make a bit more object-oriented.
	Change all uses of unwind_protect stuff to match.

	* pt-jump.h, pt-jump.cc (breaking, continuing, returning):
	Make these flags static members of the corresponding class.
	Change all uses.

	* pt-assign.cc (tree_simple_assignment_expression::eval,
	tree_multi_assignment_expression::eval): Clear lvalue index here.

	* oct-lvalue.cc (octave_lvalue::assign): Don't clear index here.
	* oct-lvalue.h (octave_lvalue::clear_index): New function.
	(octave_lvalue::set_index): Rename from octave_lvalue::index.
	Change all callers.

Thu May 15 11:48:10 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-select.h, pt-select.cc (class tree_if_command_list,
	class tree_if_clause, class tree_switch_case_list,
	class tree_switch_case): Move here from pt-misc.h, pt-misc.cc.
	* pt-decl.h, pt-decl.cc (class tree_decl_init_list,
	class tree_decl_elt): Move here from pt-mist.h, pt-misc.cc

	* pt-arg-list.h, pt-stmt.h: New files, extracted from pt-misc.h.
	* pt-arg-list.cc, pt-stmt.cc: New files, extracted from pt-misc.cc.

	* pt-decl.h, pt-except.h, pt-jump.h, pt-loop.h, pt-select.h:
	New files, extraced from pt-cmd.h.
	* pt-decl.cc, pt-except.cc, pt-jump.cc, pt-loop.cc, pt-select.cc:
	New files, extraced from pt-cmd.cc.

	* pt-unop.h, pt-binop.h, pt-colon.h, pt-idx.h, pt-assign.h:
	New files, extracted from pt-exp.h
	* pt-unop.cc, pt-binop.cc, pt-colon.cc, pt-idx.cc, pt-assign.cc:
	New files, extracted from pt-exp.cc
	* pt-exp.h, pt-exp.cc: Rename from pt-exp-base.h, pt-exp-base.cc.

	* oct-lvalue.h: Rename from oct-var-ref.h.  Rename class from
	octave_variable_reference to octave_lvalue.  Change all uses.